--- a/Archivo clase/css/styles.css
+++ b/Archivo clase/css/styles.css
@@ -59,3 +59,58 @@
         #papa > #etiqueta > a{
             color:pink;
         }
+
+        /* Titulo para Box Model*/
+        #tittle_box{
+            color: aqua;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: red;
+            text-align: center;
+            /*margin-top:20px*/
+            /*margin-botom:20px*/
+            margin: 20px;
+            border-radius: 20px;
+            padding-bottom: 30px;
+            box-shadow: 0px 0px 1px #008000;
+            box-shadow: 0px 0px 1px #bbb;
+            -webkit-box-shadow: 0px 0px 10px rgba(237,31,237,1);
+            -moz-box-shadow: 0px 0px 10px 1px rgba(237,31,237,1);
+            font-size: 40px;
+            letter-spacing: 20px;
+            word-spacing: 10px;
+            text-transform: lowercase;
+        }
+
+    
+        #box_father{
+            width: 200%;
+            height: 200%;
+            background-color: #008; 
+            background-image: url(https://th.bing.com/th/id/R.5bf1d29701d527fe390d8258a9045aa2?rik=GpCYrhfMRG9fAQ&pid=ImgRaw&r=0);
+
+        }
+        #box_model{
+            width: 50%;
+            height: 50%;
+            background-color: red;
+        }
+
+
+
+        /* media querys */
+        @media (min-width: 800px) and (max-width:1200px){
+            body{
+                background-color: red;
+            }
+            h1{
+                text-align: center;
+                color: red;
+                background-color: blue;
+            }
+        }
+
+        @media (min-width: 700px){
+            body{
+                background-image: url(https://th.bing.com/th/id/R.5bf1d29701d527fe390d8258a9045aa2?rik=GpCYrhfMRG9fAQ&pid=ImgRaw&r=0);
+            }
+        }
